--- a/views/home.hbs
+++ b/views/home.hbs
@@ -27,8 +27,8 @@
               </thead>
               <tbody>
                 <tr>
-                  <td>2</td>
-                  <td>1</td>
+                  <td>0</td>
+                  <td>0</td>
                 </tr>
               </tbody>
             </table>
@@ -37,13 +37,14 @@
         </div>
       </div>
 
-      <div class="col-8">
+      <div class="col-8 pb-5">
         {{#each posts}}
-          <div class="card mt-5 px-3">
+          <div class="card mt-5 p-3">
             <h4 class="display-4">{{title}}</h4>
-            {{username}}
             <br>
-            <p style="font-size: 20px">{{content}}</p>
+            <p style="font-size: 24px;">{{username}}
+            <br><br>
+            <p style="font-size: 18px">{{content}}</p>
           </div>
         {{/each}}
       </div>
