--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -30,9 +30,6 @@
                 <li class="list-group-item"><a href="#Profile" class="text-primary">Pofile</a></li>
                 <li class="list-group-item"><a href="#About" class="text-primary">About</a></li>
                 <li class="list-group-item"><a href="#Education" class="text-primary">Education</a></li>
-                <li class="list-group-item"><a href="#Internships & Work Experience" class="text-primary">Internship & Work Experience</a></li>
-                <li class="list-group-item"><a href="#Extra curricular Activities" class="text-primary">Extra Curricular Activities</a></li>
-                <li class="list-group-item"><a href="#Resume" class="text-primary">Resume</a></li>
               </ul>
           </div>
 
@@ -49,7 +46,7 @@
                 <div class="card-body">
                    <p text="NAME" align ="center">{{user.profile.about.name.firstName}} {{user.profile.about.name.middleName}} {{user.profile.about.name.lastName}}</p>
                    <p text="BATCH" align ="center">2019 Pasout Batch</p>
-                   <p text="SEMESTER" align ="center">{{user.profile.about.sem}}</p>
+                   <p text="SEMESTER" align ="center">{{user.profile.about.sem}}th Semester</p>
                 </div>
               </div>
 
@@ -63,15 +60,13 @@
                      <div class="col-sm">
                        <p>Date of Birth</p>
                        <p>Gender</p>
-                       <p>Address</p>
                        <p>Contact No</p>
                        <p>Email Id</p>
                      </div>
                      <div class="col-sm">
                        <!--<p>{{user.about.dob}}</p>-->
-                       <p>dob</p>
-                       <p>Male</p>
-                       <p>Address</p>
+                       <p>{{user.profile.about.dob}}</p>
+                       <p>{{user.profile.about.gender}}</p>
                        <p>{{user.profile.about.contact.phone}}</p>
                        <p>{{user.profile.about.contact.email}}</p>
 
@@ -88,126 +83,33 @@
                  <div class="card-body">
                   <div class="row">
                      <div class="col-sm-6">
-                      <h4><p>Current/Ongoing Course</p>
+                      <h4><p>B.E</p></h4>
+                      <p>{{user.profile.about.branch}}
                      </div>
                      <div class="col-sm-3">
-                      <h5><p text="cgpa" align="right">CGPA</p></h5>
+                      <h5><p text="cgpa" align="right">{{user.profile.education.be}} %</p></h5>
                     </div>
-                  </div>
-                  <div class="row">
-                    Bachelor of Engineering<br>Computer Science and Engineering<br>USN|2019 Passout Batch<br>JUN 2015-JUN 2019
-                    <table class="table table-bordered">
-                        <thead>
-                          <tr>
-                            <th scope="col">Semester</th>
-                            <th scope="col">1</th>
-                            <th scope="col">2</th>
-                            <th scope="col">3</th>
-                            <th scope="col">4</th>
-                            <th scope="col">5</th>
-                            <th scope="col">6</th>
-                            <th scope="col">7</th>
-                            <th scope="col">8</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr>
-                            <th scope="row">CGPA</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                          </tr>
-                          <tr>
-                            <th scope="row">SGPA</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                          </tr>
-                          <tr>
-                            <th scope="row">Ongoing Backlogs</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                          </tr>
-                          <tr>
-                            <th scope="row">Total Backlogs</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                          </tr>
-                        </tbody>
-                      </table>
                   </div>
                  <hr class="m-5">
+                 <div class="row">
+                   <div class="col-sm-6">
+                     <h4><p>Class XII</p>
+                    </div>
+                    <div class="col-sm-3">
+                      <h5><p text="score" align="right">{{user.profile.education.college}} %</p></h5>
+                    </div>
+                  </div>
+                  <hr class="m-5">
                     <div class="row">
-                       <div class="col-sm-6">
-                        <h4><p>Class 12th/Diploma</p>
-                       </div>
-                       <div class="col-sm-3">
-                        <h5><p text="score" align="right">Score</p></h5>
+                      <div class="col-sm-6">
+                        <h4><p>Class X</p>
+                      </div>
+                      <div class="col-sm-3">
+                        <h5><p text="score" align="right">{{user.profile.education.school}} %</p></h5>
                       </div>
                     </div>
-                    College  Name<br>Board<br>12th/Diploma<br>2014-2015
-                      <hr class="m-5">
-                    <div class="row">
-                       <div class="col-sm-6">
-                        <h4><p>Class 10th</p>
-                       </div>
-                       <div class="col-sm-3">
-                        <h5><p text="score" align="right">Score</p></h5>
-                      </div>
-                    </div>
-                    School  Name<br>Board<br>10th<br>2013-2014
                  </div>
               </div>
-
-              <div class="card mb-3" id="Internship & Work Experience">
-                 <div class="card-header">
-                    <h5>INTERNSHIP & WORK EXPERIENCE</h5>
-                 </div>
-                 <div class="card-body">
-                    Company Name<br>Job Title<br>Location<br>Star date<br>End Date
-                 </div>
-              </div>
-
-              <div class="card mb-3" id="Extra Curricular Activities">
-                 <div class="card-header">
-                    <h5>EXTRA CURRICULAR ACTIVITIES</h5>
-                 </div>
-                 <div class="card-body">
-                    Category<br>Description
-                 </div>
-              </div>
-
-              <div class="card mb-3" id="Resume">
-                 <div class="card-header">
-                    <h5>RESUME</h5>
-                 </div>
-                 <div class="card-body">
-
-                 </div>
-              </div>
-
            </div>
          </div>
     </div>
