--- a/views/jobprofiles.hbs
+++ b/views/jobprofiles.hbs
@@ -34,27 +34,27 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <th scope="row"><img src="https://media.licdn.com/dms/image/C560BAQGsLdI_nNslkA/company-logo_200_200/0?e=2159024400&v=beta&t=ZoCaIPoHggSe3bBGS8AsqxlAa7RXkQmeyQETvzAZC5g" width="20" height="20" ><a href="/job">Trainee Software</a></th>
+                    <th scope="row"><img src="https://media.licdn.com/dms/image/C560BAQGsLdI_nNslkA/company-logo_200_200/0?e=2159024400&v=beta&t=ZoCaIPoHggSe3bBGS8AsqxlAa7RXkQmeyQETvzAZC5g" width="20" height="20" ><a href="#">Trainee Software</a></th>
                     <td>SLK Software Services Pvt Ltd</td>
                     <td>Any Where in India</td>
                     <td></td>
                   </tr>
                   <tr>
                     <th scope="row">
-                      <img src="https://media.licdn.com/dms/image/C510BAQHkVSZqZOfubg/company-logo_200_200/0?e=2159024400&v=beta&t=yEN1ZuBSW2u0BQz_H4csoFDpDQzkK_peY69xJmGtfWI" width="20" height="20" ><a href="/job">Engineers</a>
+                      <img src="https://media.licdn.com/dms/image/C510BAQHkVSZqZOfubg/company-logo_200_200/0?e=2159024400&v=beta&t=yEN1ZuBSW2u0BQz_H4csoFDpDQzkK_peY69xJmGtfWI" width="20" height="20" ><a href="#">Engineers</a>
                     </th>
                     <td>Mindtree</td>
                     <td>Any Where in India</td>
                     <td></td>
                   </tr>
                   <tr>
-                    <th scope="row"><img src="https://img.etimg.com/thumb/msid-65930745,width-300,imgsize-252591,resizemode-4/lt-technology-services.jpg" width="20" height="20" ><a href="/job">Associate Engineer</a></th>
+                    <th scope="row"><img src="https://img.etimg.com/thumb/msid-65930745,width-300,imgsize-252591,resizemode-4/lt-technology-services.jpg" width="20" height="20" ><a href="#">Associate Engineer</a></th>
                     <td>L&T Technology Services</td>
                     <td>Any Where in India</td>
                     <td></td>
                   </tr>
                   <tr>
-                    <th scope="row"><img src="https://logonoid.com/images/cgi-logo.png" width="20" height="20" ><a href="/job">Associate Software Engineer</a></th>
+                    <th scope="row"><img src="https://logonoid.com/images/cgi-logo.png" width="20" height="20" ><a href="#">Associate Software Engineer</a></th>
                     <td>CGI</td>
                     <td>Any Where in India</td>
                     <td></td>
